# datastar-wordle-flask

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  transcript.md  words.py
static/css/: gold.css  index.css
static/js/: index.js
templates/: index.html
utils/: logger.py  paths.py
