[project]
name = "datastar-wordle-flask"
version = "0.1.0"
description = "A Wordle game clone built with Datastar and Flask, demonstrating synchronous SSE patterns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.7.0",
    "certifi>=2024.12.14", 
    "click>=8.1.8",
    "colorama>=0.4.6",
    "Deprecated>=1.2.15",
    "distro>=1.9.0",
    "dotenv==0.9.9",
    "flask>=3.1.0",
    "flask-limiter>=3.9.2",
    "gunicorn>=23.0.0",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.5",
    "jiter>=0.8.2",
    "limits>=3.14.1",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=3.0.2",
    "mdurl>=0.1.2",
    "ordered-set>=4.1.0",
    "packaging>=24.2",
    "pydantic>=2.10.4",
    "pydantic_core>=2.27.2",
    "Pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "sniffio>=1.3.1",
    "tinydb>=4.8.2",
    "tqdm>=4.67.1",
    "typing_extensions>=4.12.2",
    "Werkzeug>=3.1.3",
    "wrapt>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-flask>=1.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Documentation = "https://data-star.dev"
Repository = "https://github.com/starfederation/datastar"